<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.airbnb.lottie.samples.views.Marquee
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:titleText="@string/preview_title"/>

        <com.airbnb.lottie.samples.PreviewItemView
            android:id="@+id/qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/preview_qr"
            app:icon="@drawable/ic_qr_scan"/>

        <com.airbnb.lottie.samples.PreviewItemView
            android:id="@+id/file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/preview_file"
            app:icon="@drawable/ic_file"/>

        <com.airbnb.lottie.samples.PreviewItemView
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/preview_url"
            app:icon="@drawable/ic_network"/>

        <com.airbnb.lottie.samples.PreviewItemView
            android:id="@+id/assets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/preview_assets"
            app:icon="@drawable/ic_storage"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>