<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/speedContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/speedButtonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="4dp"
        android:paddingTop="8dp">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <com.airbnb.lottie.samples.views.ControlBarItemToggleView
            style="@style/SpeedItem"
            app:text="@string/minus_one_x"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.airbnb.lottie.samples.views.ControlBarItemToggleView
            style="@style/SpeedItem"
            app:text="@string/minus_half_x"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.airbnb.lottie.samples.views.ControlBarItemToggleView
            style="@style/SpeedItem"
            app:text="@string/half_x"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.airbnb.lottie.samples.views.ControlBarItemToggleView
            style="@style/SpeedItem"
            app:text="@string/one_x"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.airbnb.lottie.samples.views.ControlBarItemToggleView
            style="@style/SpeedItem"
            app:text="@string/two_x"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <ImageButton
            android:id="@+id/closeSpeedButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_close"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_gravity="bottom"
        android:background="@color/divider"/>
</FrameLayout>
