<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <FrameLayout
        android:id="@+id/animationContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/toolbarsContainer">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/outline"/>
    </FrameLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        app:navigationIcon="@drawable/ic_back_black"
        app:title=""/>

    <FrameLayout
        android:id="@id/toolbarsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/renderTimesGraphContainer">

        <LinearLayout
            android:id="@+id/toolbarContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/scaleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/scale"/>

            <Button
                android:id="@+id/backgroundButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/background"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/scaleContainer"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/scaleText"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#222222"
                android:textSize="14sp"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/scaleSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/closeScaleButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_close"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/backgroundColorContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:visibility="gone">

            <com.airbnb.lottie.samples.views.BackgroundColorView
                android:id="@+id/backgroundButton1"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:background="@color/background_color1"/>

            <com.airbnb.lottie.samples.views.BackgroundColorView
                android:id="@+id/backgroundButton2"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:background="@color/background_color2"/>

            <com.airbnb.lottie.samples.views.BackgroundColorView
                android:id="@+id/backgroundButton3"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:background="@color/background_color3"/>

            <com.airbnb.lottie.samples.views.BackgroundColorView
                android:id="@+id/backgroundButton4"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:background="@color/background_color4"/>

            <com.airbnb.lottie.samples.views.BackgroundColorView
                android:id="@+id/backgroundButton5"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:background="@color/background_color5"/>

            <com.airbnb.lottie.samples.views.BackgroundColorView
                android:id="@+id/backgroundButton6"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:background="@color/background_color6"/>

            <ImageButton
                android:id="@+id/closeBackgroundColorButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_close"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_gravity="top"
            android:background="@color/divider"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_gravity="bottom"
            android:background="@color/divider"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/renderTimesGraphContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/controlsContainer"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="16dp"
            android:text="@string/ms"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/renderTimesGraph"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:layout_marginRight="64dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@id/controlsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_play_pause"/>

        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/loopButton"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_loop"/>
    </LinearLayout>

</RelativeLayout>